# VecHist

./: .gitignore  1a0co5z2.qdi.txt.bak  3sfreyec.lu4.txt.bak  4tjdd3b5.rh3.txt.bak  AppSettings.cpp  AppSettings.h  ArrowButton.cpp  ArrowButton.h  ArrowWidget.cpp  ArrowWidget.h  BoxRenderable.cpp  BoxRenderable.h  CMakeLists.txt  Cubemap.cpp  Cubemap.h  DataManager.cpp  DataManager.h  DataMgr.cpp  DataMgr.h  DataMgrCosm.cpp  DataMgrCosm.h  DataMgrVect.cpp  DataMgrVect.h  EntropyQueryContainer.cpp  EntropyQueryContainer.h  EntropySlider.cpp  EntropySlider.h  GL2DProjWidget.cpp  GL2DProjWidget.h  GLTextureCube.cpp  GLTextureCube.h  GlyphRenderable.cpp  GlyphRenderable.h  GraphVizWidget.cpp  GraphVizWidget.h  HistMesh.cpp  HistMesh.h  HistReader.cpp  HistReader.h  LineRenderable.cpp  (+69 more)
bak/: glSuperquadric.cpp  scene.cpp  scene.h
python/: .spyderworkspace  cubemap_coords.py  gen_volume.py  sample_3d_ball.py  sample_ball.py  sample_random.py  sample_random_ball.py  sample_two_halves.py  sample_uniform.py  sample_x.py  vechist.py  write_vec.py
python/crystal/: .gitignore  compute_crystal.ipynb
python/vechist/: .spyderproject  GenDensityVolume.py  GenHaloVecs.py  binary_tree.txt  cubemap_coords.py  dims.txt  entropys.txt  gen_idx.py  loadHaloFile.py  plot_vec.py  polar_histogram.py  read_vec.py  solid_angle.py  starts.txt  subsample.py  test.py  timing.txt  vechist.py  vechist.pyproj  vechist.sln
resources/: FindOSUFlow.cmake  basic.vsh  boxes.qrc  cut_plane.fsh  distribution.fsh  distribution.fsh.bak  parameters.par  parameters.par.bak  parameters_nek.par  picking.fsh  sphere_brush.fsh  vechist.qrc
resources/bak/: distribution.fsh
